--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,16 @@ dependencies = [
     "tqdm>=4.67.1",
 ]
 
+[tool.ruff.lint]
+extend-select = [
+    "B",
+    "E",
+    "F",
+    "I",
+    "W",
+]
+extend-ignore = ["E501"]
+
 [tool.vulture]
 exclude = ["venv", ".venv"]
 ignore_names = ["test*"]
